--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vite": "^4.3.1"
   },
   "dependencies": {
-    "sweetalert2": "^11.4.8"
+    "@sweetalert2/theme-dark": "^5.0.15",
+    "sweetalert2": "^11.7.3"
   },
   "type": "module"
 }
